--- a/style.css
+++ b/style.css
@@ -59,11 +59,11 @@ h3 {
 
 .fa-github {
     margin-left: -20%;
-    color: white;
+    color: bisque;
 }
 
 .fa-whatsapp {
-    color: white;
+    color: bisque;
     margin-left: 40%;
 }
 
@@ -95,7 +95,7 @@ footer {
     left: 0;
     width: 0;
     height: 5%;
-    background-color: white;
+    background-color: bisque;
     transition: .7s ease;
 }
 
@@ -265,7 +265,7 @@ footer {
 }
 
 .divAboutMe p {
-    font-size: 1.9vh;
+    font-size: 2vh;
 }
 
 
